<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/teal">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:elevation="10dp"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/complete_setup"
                android:id="@+id/login_title"
                android:layout_marginTop="20dp"
                android:textSize="36sp"
                android:textStyle="bold"
                android:textColor="@color/link_blue"
                android:layout_centerHorizontal="true" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fullname"
                android:layout_below="@id/login_title"
                android:layout_marginTop="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:inputType="text"
                android:hint="@string/full_name"
                android:importantForAutofill="no" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/location"
                android:layout_below="@id/fullname"
                android:layout_marginTop="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:inputType="text"
                android:hint="@string/location"
                android:importantForAutofill="no" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonFinish"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_below="@id/location"
                android:layout_marginTop="30dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/button_login"
                android:text="@string/finish"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_marginBottom="20dp"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>