<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/teal">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:elevation="10dp"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:id="@+id/login_title"
                android:layout_marginTop="20dp"
                android:textSize="36sp"
                android:textStyle="bold"
                android:textColor="@color/link_blue"
                android:layout_centerHorizontal="true" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etEmail"
                android:layout_below="@id/login_title"
                android:layout_marginTop="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:inputType="textEmailAddress"
                android:hint="@string/email_address"
                android:importantForAutofill="no" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etPassword"
                android:layout_below="@id/etEmail"
                android:layout_marginTop="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:importantForAutofill="no" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonLogin"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_below="@id/etPassword"
                android:layout_marginTop="30dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/button_login"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textAllCaps="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/register_link"
                android:layout_below="@id/buttonLogin"
                android:text="@string/sign_up_for_a_new_account"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_alignParentEnd="true"
                android:textSize="18sp"
                android:textColor="#0000EE"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/forgot_password_link"
                android:layout_below="@id/register_link"
                android:text="@string/forgot_password"
                android:layout_marginTop="30dp"
                android:visibility="invisible"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:layout_centerHorizontal="true"
                android:textSize="18sp"
                android:textColor="#0000EE"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>