<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/relativeLayout1">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/backArrow"
            android:layout_marginStart="10dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_backarrow"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/backArrow"
            android:layout_marginStart="10dp"
            android:layout_centerVertical="true"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/settings"/>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reset_email"
        android:layout_below="@id/relativeLayout1"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:textColor="@color/link_blue"
        android:text="@string/change_email"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reset_password"
        android:layout_below="@id/reset_email"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:textColor="@color/link_blue"
        android:text="@string/reset_your_password"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reset_password"
        android:id="@+id/attribution"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/attribution"
        android:layout_marginTop="10dp"
        android:id="@+id/relativeLayout2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/version_number"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/black"
            android:textSize="18sp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relativeLayout2"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/current_version"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:visibility="invisible"
            android:text="@string/you_have_the_most_up_to_date_version"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/new_version"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:visibility="invisible"
            android:text="@string/click_here_to_download_new_updates"/>

    </RelativeLayout>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/adBanner"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3741814945474848/5123120270"/>

</RelativeLayout>