<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/relativeLayout1">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/backArrow"
            android:layout_marginStart="10dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_backarrow"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/backArrow"
            android:layout_marginStart="10dp"
            android:layout_centerVertical="true"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/reset_password"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/relativeLayout2"
        android:layout_below="@id/relativeLayout1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/authenticate_email"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/tvEmail"
                android:text="@string/reset_password"
                android:textSize="18sp"
                android:textColor="@color/black"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_below="@id/tvEmail"
                android:id="@+id/etEmail"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:importantForAutofill="no" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_below="@id/etEmail"
                android:id="@+id/password"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:importantForAutofill="no" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/authenticate"
                android:layout_below="@id/password"
                android:layout_alignParentEnd="true"
                android:textAllCaps="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/authenticate"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_reset"
            android:visibility="gone"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/tvEmail1"
                android:text="@string/reset_password"
                android:textSize="18sp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_below="@id/tvEmail1"
                android:id="@+id/new_password"
                android:hint="@string/enter_new_password"
                android:inputType="textPassword"
                android:importantForAutofill="no" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/change_password"
                android:layout_below="@id/new_password"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/change_password"/>

        </RelativeLayout>

    </RelativeLayout>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/adBanner"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3741814945474848/5123120270"/>

</RelativeLayout>